--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ ul {
   background-color: #05043e;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content:space-between;
   padding: 0.75rem;
   border-radius: 10px;
   box-shadow: 0 10px 50px 0 rgba(5, 4, 62, 0.25);
@@ -38,8 +38,8 @@ ul {
 li {
   margin-bottom: 0.75rem; /* Adjust spacing between items */
 }
-li:nth-child(6) {
-  margin-top: 5rem;
+li:nth-child(5) {
+  margin-top: 7rem;
   padding-top: 1.25rem;
   border-top: 1px solid #363664;
 }
@@ -201,15 +201,14 @@ position: fixed; /* Sticks to the viewport */
 .c-logo {
     width: 70%;
 }
-.sort-container{
+.sort-container, .filter-container{
     position: relative;
-}
-.filter-container {
-    position: relative;
+    margin-top: -0.5%;
 }
 .search-container {
     margin-left: auto;
     position: relative;
+    margin-right: 1%;
 }
 .dropdown-button {
     background-color: #007BFF;
@@ -251,8 +250,7 @@ position: fixed; /* Sticks to the viewport */
 .top-menu, .top-menu1 {
   height: 85px;
   display: flex;
-  flex-direction: row;
-  column-gap: 15px; 
+  flex-direction: row; 
   background-color: #2C3E50;
   color: white;
   padding: 20px;
@@ -272,7 +270,44 @@ font-size: 30px;
     width: 25%;
     padding: 20px;
   }
-  
+  .error-message, .success-message{
+    color: red;
+    font-size: 18px;
+    margin: 0px 18px;
+  }
+.success-message {
+  color: green;
+}
+.welcome-message{
+  font-weight: 600;
+  font-size: 20px;
+  margin: 10px 20px;
+}
+.job-profile h2 {
+  font-weight: 600;
+  font-size: 20px;
+  margin: 5px 0px;
+}
+.job-profile {
+  margin: 0px 20px;
+}
+button {
+  background-color: #4CAF50; 
+  color: white; 
+  border: none; 
+  padding: 10px 20px; 
+  text-align: center; 
+  text-decoration: none; 
+  display: inline-block; 
+  font-size: 16px; 
+  margin: 5px 10px; 
+  cursor: pointer; 
+  border-radius: 5px; 
+  transition: background-color 0.3s ease; 
+}
+button:hover {
+  background-color: #45a049;
+}
   label {
     /* font-size: 18px;
     color: #333; */
@@ -370,7 +405,7 @@ font-size: 30px;
     font-size: 20px;
   }
   
-  .clear-icon, .search-icon {
+.clear-icon, .search-icon {
     position: absolute;
     right: 10px; 
     top: 50%; 
@@ -378,4 +413,4 @@ font-size: 30px;
     cursor: pointer; 
     color: #888;
     font-size: 1.375rem;
-}
+} 
