--- a/styles.css
+++ b/styles.css
@@ -414,3 +414,158 @@ button:hover {
     color: #888;
     font-size: 1.375rem;
 } 
+
+.home-container {
+  width: 99%;
+  margin: 10px;
+  padding: 40px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.home-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.home-header h1 {
+  font-size: 70px;
+  font-weight: 500;
+  color: #333;
+  max-width: 80%;
+  line-height: 1.2;
+}
+
+.home-header p {
+  font-size: 20px;
+  color: #555;
+  margin-top: 10px;
+  max-width: 75%;
+}
+
+.get-started-btn {
+  background-color: #00a998;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  font-size: 18px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.get-started-btn:hover {
+  background-color: #00d1b5;
+}
+
+.home-header img {
+  width: 35%;
+  height: auto;
+  background-color: rgba(245, 245, 245, 0.351);
+}
+
+.footer-logos {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 30px;
+}
+
+.footer-logos img {
+  width: 140px;
+  height: auto; 
+}
+
+.contact-section {
+  text-align: center;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-section h1 {
+  font-size: 36px;
+  width: 60%;
+}
+
+.highlight {
+  color: #e63946; /* Change color for emphasis */
+  font-weight: bold;
+}
+
+.contact-section p {
+  font-size: 17px;
+  margin-bottom: 25px;
+}
+
+.button-container {
+  margin-bottom: 20px;
+}
+
+.team-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 3%;
+}
+
+.team-member {
+  /* background-color: rgba(9, 157, 194, 0.34); */
+  background-color: rgba(0, 70, 210, 0.4);
+  border-radius: 10px;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+  margin: 5px 15px;
+  text-align: center;
+  width: 200px;
+  height: 260px;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  filter: grayscale(100%);
+  transition: filter 1s ease;
+  transition: scale 0.5s ease;
+}
+.team-member:hover {
+  filter: grayscale(0%);
+  scale: 1.1;
+}
+.member-name {
+  margin-top: auto;
+  background-color: rgba(255, 255, 255, 0.77);
+  border-radius: 3px;
+  margin-bottom: 3px;
+  margin-left: 7px;
+  margin-right: 7px;
+}
+.team-member h3 {
+  font-size: 22px;
+  font-weight: 600;
+  margin: 0px;
+}
+
+.team-member p {
+  font-size: 12px;
+  font-weight: 500;
+  margin: 0px;
+}
+.contact-footer {
+  background-color: #ffffff5f;
+  border-radius: 10px;
+  text-align: left;
+  padding: 10px 15px;
+  margin: 20px 10px;
+}
+.contact-footer p {
+  font-size: 12px;
+  margin-bottom: 0px;
+}
+.contact-footer a {
+  color: #0051ff;
+}
