--- a/styles.css
+++ b/styles.css
@@ -273,7 +273,10 @@ font-size: 30px;
   .error-message, .success-message{
     color: red;
     font-size: 18px;
-    margin: 0px 18px;
+    margin-left: 10%;
+  }
+  .formbg .error-message {
+    margin-left: 20%;
   }
 .success-message {
   color: green;
@@ -342,7 +345,8 @@ button:hover {
     width: 100%;
     padding: 12px;
     margin-bottom: 20px;
-    border: 1px solid #BDC3C7;
+    border: none;
+    border-bottom: 2px solid black;
     border-radius: 4px;
     font-size: 16px;
     background-color: white;
@@ -574,4 +578,44 @@ button:hover {
 }
 .contact-footer a {
   color: #0051ff;
+}
+.container, .container-r{
+  margin-top: 100px;
+  width: 90%;
+  display: flex;
+  column-gap: 5%;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  border-radius: 8px;
+}
+.container-r {
+  margin-top: 30px;
+  flex-direction:row-reverse;
+  column-gap: 100px;
+  margin-left: 5%;
+}
+.container-r .image-section img{
+  width: 550px;
+}
+.image-section img {
+  width: 400px;
+  height: auto;
+}
+.formbg {
+  width: 120%;
+}
+.form-header {
+  text-align: center;
+}
+.form-header h2 {
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+label {
+  margin-bottom: 10px;
+}
+.footer-link { 
+  margin-top: 10px;
 }
