--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,20 @@ body {
   padding-bottom: 5vh;
   background-color: #9fbfff;
 }
+/* .aboutuspage{
+  background-image: url('bg2.png'); 
+    background-position: right bottom; 
+    background-repeat: no-repeat;
+    background-size: 65%;
+    min-height: 100vh; 
+    align-items: flex-start;
+    justify-content: flex-start;
+} */
 h1 {
     font-size: 2.5em;
     font-weight: 700;
 }
-ul {
+.navbar {
   list-style: none;
   margin: 0;
   position: fixed;
@@ -35,16 +44,16 @@ ul {
   height: calc(100vh - 6vh);
   z-index: 100;
 }
-li {
+.navbar li {
   margin-bottom: 0.75rem; /* Adjust spacing between items */
 }
-li:nth-child(5) {
-  margin-top: 7rem;
+.navbar li:nth-child(4) {
+  margin-top: 15rem;
   padding-top: 1.25rem;
   border-top: 1px solid #363664;
 }
 
-li + li {
+.navbar li + li {
   margin-top: 0.75rem;
 }
 
@@ -490,19 +499,45 @@ button:hover {
   height: auto; 
 }
 
-.contact-section {
+.contact-section{
   text-align: center;
   margin-top: 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
+.bg {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 60%;
+}
+.about-section {
+  margin: 1%;
+  display: flex;
+  flex-direction: column;
+}
 .contact-section h1 {
   font-size: 36px;
   width: 60%;
 }
-
+.about-section h2 {
+  font-size: 24px;
+  width: 45%;
+}
+.about-section h1 {
+  margin-top: 2%;
+  margin-bottom: 5px;
+  font-size: 28px;
+  width: 60%;
+}
+.aboutlist {
+  list-style-type: disc;
+  padding-left: 20px;
+}
+.aboutlist li b {
+  font-weight: bold !important; /* Ensure bold text */
+}
 .highlight {
   color: #e63946; /* Change color for emphasis */
   font-weight: bold;
